--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<link rel="apple-touch-icon" sizes="180x180"
-        href="//cdn.classlink.com/production/launchpad/resources/images/favicon/apple-touch-icon.png">
+
     <link rel="icon" type="image/png"
         href="//cdn.classlink.com/production/launchpad/resources/images/favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png"
         href="//cdn.classlink.com/production/launchpad/resources/images/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="//cdn.classlink.com/production/launchpad/resources/images/favicon/manifest.json">
-<title> Classlink
+<title> Classlink <title>
 <p style="text-align: center;"><a href="https://sites.google.com/view/unblocked-games-mom/"><strong>UNBLOCKED GAMES MOM</strong></a></p>
 <p style="text-align: center;"><a href="https://sites.google.com/site/funblocked77/"><strong>UNBLOCKED GAMES 77</strong></a></p>
 <p style="text-align: center;"><a href="https://sites.google.com/view/games-unblockedd/"><strong>Unblocked Games Premium</strong></a></p>
