--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
-    <link rel="icon" type="image/png"
-        href="//cdn.classlink.com/production/launchpad/resources/images/favicon/favicon-32x32.png" sizes="32x32">
-<title> Classlink <title>
+<head>
+  <title>Classlin</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+</head>
 <p style="text-align: center;"><a href="https://sites.google.com/view/unblocked-games-mom/"><strong>UNBLOCKED GAMES MOM</strong></a></p>
 <p style="text-align: center;"><a href="https://sites.google.com/site/funblocked77/"><strong>UNBLOCKED GAMES 77</strong></a></p>
 <p style="text-align: center;"><a href="https://sites.google.com/view/games-unblockedd/"><strong>Unblocked Games Premium</strong></a></p>
