--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
-  <title>Classlin</title>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <title>Classlink</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <p style="text-align: center;"><a href="https://sites.google.com/view/unblocked-games-mom/"><strong>UNBLOCKED GAMES MOM</strong></a></p>
 <p style="text-align: center;"><a href="https://sites.google.com/site/funblocked77/"><strong>UNBLOCKED GAMES 77</strong></a></p>
